--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -10,11 +10,15 @@
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular-resource.js"></script>
     <style>
         .header {
-            border: 0px solid #000000;
+            border: 0 solid #000000;
             margin: 0.3125em 0.3125em 0.3125em 0.3125em;
             background-color: #66ffc2;
             height: 40px;
             opacity: 0.5;
+        }
+
+        #botoes {
+            margin-top: 1em;
         }
     </style>
 </head>
@@ -37,19 +41,31 @@
                 <label class="form-check-label" for="forgotCep">Esqueceu o cep?</label>
             </div>
         </div>
-        <div class="row">
-            <div class="col-md-6">
-                <button class="btn btn-default" ng-click="buscaPorFiltros()">Buscar</button>
-                <button class="btn btn-default" ng-click="limpar()">Limpar</button>
+        <div class="row" ng-show="filter.forgotCep">
+            <div class="form-group col-xs-12 col-md-12 col-sm-12 col-lg-12">
+                <div class="col-xs-2 col-md-2 col-sm-2 col-lg-2" style="padding: 0;">
+                    <label for="uf">UF:</label>
+                    <select id="uf" class="form-control col-xs-3 col-md-3 col-sm-3 col-lg-3">
+                        <option value="es">ES</option>
+                        <option value="sp">SP</option>
+                    </select>
+                </div>
+                <div class="col-xs-3 col-md-3 col-sm-3 col-lg-3">
+                    <label for="cidade">Cidade:</label>
+                    <input type="text" id="cidade" class="form-control"
+                           maxlength="100" ng-model="filter.cidade">
+                </div>
+                <div class="col-xs-4 col-md-4 col-sm-4 col-lg-4">
+                    <label for="logradouro">Logradouro:</label>
+                    <input type="text" id="logradouro" class="form-control"
+                           maxlength="200" ng-model="filter.logradouro">
+                </div>
             </div>
         </div>
-        <div class="row" ng-show="filter.forgotCep">
-            <div class="form-group">
-                <label for="uf">UF:</label>
-                <select id="uf">
-                    <option>ES</option>
-                    <option>SP</option>
-                </select>
+        <div id="botoes" class="row">
+            <div class="col-xs-6 col-md-6 col-sm-6 col-lg-6">
+                <button class="btn btn-default" ng-click="buscaPorFiltros()">Buscar</button>
+                <button class="btn btn-default" ng-click="limpar()">Limpar</button>
             </div>
         </div>
         <div class="row">
