--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -30,7 +30,7 @@
         <h1 class="text-center">Busca Cep</h1>
         <div class="row">
             <div class="form-group col-xs-3 col-md-3 col-sm-3 col-lg-3">
-                <labe for="cepInput">CEP:</labe>
+                <label for="cepInput">CEP:</label>
                 <input type="text" class="form-control" id="cepInput" ng-model="filter.cep"
                        maxlength="25" placeholder="Ex: 99999999" ng-disabled="filter.forgotCep" />
                 <small id="hintCep" class="form-text text-muted">
@@ -136,8 +136,11 @@
 
         $scope.limpar = function() {
             $scope.info = null;
-            $scope.filter.cep = null;
-            $scope.filter.forgotCep = false;
+            if($scope.filter.forgotCep === true) {
+                $scope.filter.uf = null;
+                $scope.filter.cidade = null;
+                $scope.filter.logradouro = null;
+            }
         };
     }]);
 
