--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -52,7 +52,8 @@
             <div class="form-group">
                 <div class="col-xs-2 col-md-2 col-sm-2 col-lg-2" style="padding: 0;">
                     <label for="uf">UF:</label>
-                    <select id="uf" class="form-control col-xs-3 col-md-3 col-sm-3 col-lg-3">
+                    <select id="uf" ng-model="filter.uf"
+                            class="form-control col-xs-3 col-md-3 col-sm-3 col-lg-3">
                         <option value="es">ES</option>
                         <option value="sp">SP</option>
                     </select>
@@ -136,15 +137,25 @@
 
         $scope.buscaPorFiltros = function() {
             var cep = $scope.filter.cep;
-            MyAppFactory.get({cep: $scope.filter.cep})
-            .$promise.then(function(data) {
-                $scope.info = data;
-            });
+            if($scope.filter.forgotCep) {
+                var uf = $scope.filter.uf;
+                var cidade = $scope.filter.cidade;
+                var logradouro = $scope.filter.logradouro;
+                MyAppFactory.obtemCeps.get({uf: uf, cidade: cidade, logradouro: logradouro})
+                    .$promise.then(function(data) {
+                    $scope.ceps = data;
+                });
+            } else {
+                MyAppFactory.obtemCep.get({cep: $scope.filter.cep})
+                    .$promise.then(function(data) {
+                    $scope.info = data;
+                });
+            }
         };
 
         $scope.limpar = function() {
             $scope.info = null;
-            if($scope.filter.forgotCep === true) {
+            if($scope.filter.forgotCep) {
                 $scope.filter.uf = null;
                 $scope.filter.cidade = null;
                 $scope.filter.logradouro = null;
@@ -153,12 +164,21 @@
     }]);
 
     myApp.factory('MyAppFactory', ['$resource', function($resource) {
-            return $resource('/apirest/teste/:verb/:cep', {}, {
+        return {
+            obtemCep: $resource('/apirest/teste/:verb/:cep', {}, {
                 get: {
                     method: 'GET',
                     params: {verb: 'cep'}
                 }
-            });
+            }),
+            obtemCeps: $resource('/apirest/teste/:verb/:cep/:uf/:cidade/:logradouro', {}, {
+                get: {
+                    method: 'GET',
+                    params: {verb: 'cep'},
+                    isArray: true
+                }
+            })
+        }
     }]);
 
     myApp.config(['$resourceProvider', function($resourceProvider) {
