fix broked comment

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -137,9 +137,9 @@
 
             //TODO implementar o disable do botao buscar paenas quando o cep for igual a 8 carac ou
             //uf for diferente de null e cidade e loggradouro forem maiores do que 3 carac
-<!--        if($scope.filter.cep === 8) {-->
-<!--            $scope.showBtn = true;-->
-<!--        } else if($scope.filter.cep === null && $scope.filter.uf)-->
+			//if($scope.filter.cep === 8) {-->
+			//    $scope.showBtn = true;-->
+			//} else if($scope.filter.cep === null && $scope.filter.uf)-->
 
         $scope.buscaPorFiltros = function() {
             var cep = $scope.filter.cep;
