separando css em arquivos

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -9,20 +9,8 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular-resource.js"></script>
-    <style>
-        .header {
-            border: 0 solid #000000;
-            margin: 0.3125em 0.3125em 0.3125em 0.3125em;
-            background-color: #66ffc2;
-            height: 40px;
-            opacity: 0.5;
-        }
-
-        #botoes {
-            margin-top: 1em;
-            margin-bottom: 1em;
-        }
-    </style>
+    <link rel="stylesheet" href="css/reset.css" />
+    <link rel="stylesheet" href="css/index.css" />
 </head>
 <body>
 <div class="header"></div>
