--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -3,14 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <title>Busca Cep</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular.min.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular-resource.js"></script>
-    <link rel="stylesheet" href="css/reset.css" />
-    <link rel="stylesheet" href="css/index.css" />
+    <link rel="stylesheet" href="css/app/reset.css" crossorigin="anonymous" />
+    <link rel="stylesheet" href="css/app/index.css" crossorigin="anonymous" />
+    <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" crossorigin="anonymous" />
+    <link rel="stylesheet" href="css/bootstrap/bootstrap-theme.min.css" crossorigin="anonymous" />
+    <script src="js/jquery/jquery-3.5.1.min.js" crossorigin="anonymous"></script>
+    <script src="js/bootstrap/bootstrap.min.js" crossorigin="anonymous"></script>
+    <script src="js/angularjs/angular.min.js" crossorigin="anonymous"></script>
+    <script src="js/angularjs/angular-resource.min.js" crossorigin="anonymous"></script>
+    <script src="js/angularjs/angular-route.min.js" crossorigin="anonymous"></script>
 </head>
 <body>
 <div class="header"></div>
