--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -7,11 +7,11 @@
     <link rel="stylesheet" href="css/app/index.css" crossorigin="anonymous" />
     <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" crossorigin="anonymous" />
     <link rel="stylesheet" href="css/bootstrap/bootstrap-theme.min.css" crossorigin="anonymous" />
-    <script src="js/jquery/jquery-3.5.1.min.js" crossorigin="anonymous"></script>
-    <script src="js/bootstrap/bootstrap.min.js" crossorigin="anonymous"></script>
-    <script src="js/angularjs/angular.min.js" crossorigin="anonymous"></script>
-    <script src="js/angularjs/angular-resource.min.js" crossorigin="anonymous"></script>
-    <script src="js/angularjs/angular-route.min.js" crossorigin="anonymous"></script>
+    <script src="js/libs/jquery/jquery-3.5.1.min.js" crossorigin="anonymous"></script>
+    <script src="js/libs/bootstrap/bootstrap.min.js" crossorigin="anonymous"></script>
+    <script src="js/libs/angularjs/angular.min.js" crossorigin="anonymous"></script>
+    <script src="js/libs/angularjs/angular-resource.min.js" crossorigin="anonymous"></script>
+    <script src="js/libs/angularjs/angular-route.min.js" crossorigin="anonymous"></script>
 </head>
 <body>
 <div class="header"></div>
@@ -112,7 +112,7 @@
             uf: null,
             cidade: null,
             logradouro: null
-        }
+        };
 
         $scope.limpaFormulario = function() {
             if($scope.filter.forgotCep === true) {
@@ -123,7 +123,7 @@
                 $scope.filter.cidade = null;
                 $scope.filter.logradouro = null;
             }
-        }
+        };
 
             //TODO implementar o disable do botao buscar paenas quando o cep for igual a 8 carac ou
             //uf for diferente de null e cidade e loggradouro forem maiores do que 3 carac
